--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,9 @@ jobs:
     steps:
       - checkout
       - update_npm_and_install_deps
-      - npm run build
+      - run:
+        name: Build code
+        command: npm run build
 
 workflows:
   version: 2
