--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "reactjs-popup": "^1.3.2",
     "remark": "^10.0.1",
     "remark-react": "^5.0.1",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "strip-markdown": "^3.0.3"
   },
   "devDependencies": {
     "now": "^15.0.6",
@@ -54,7 +55,7 @@
     "serve": "gatsby serve",
     "deploy": "npm run now -- --target production -f --local-config .deploy/now.json --public && npm run now -- rm hiddentao-com-live --safe --yes",
     "now": "now --token $NOW_TOKEN --scope hiddentao",
-    "now-build": "npm run build"  
+    "now-build": "npm run build"
   },
   "repository": {
     "type": "git",
