--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react-helmet": "^5.2.0",
     "react-syntax-highlighter": "^10.2.1",
     "reactjs-popup": "^1.3.2",
-    "remark": "^10.0.1",
-    "remark-react": "^5.0.1",
+    "remark": "^11.0.0",
+    "remark-parse": "^7.0.0",
+    "remark-react": "^6.0.0",
     "rimraf": "^2.6.3",
-    "strip-markdown": "^3.0.3"
+    "strip-markdown": "^3.0.3",
+    "unified": "^8.3.2"
   },
   "devDependencies": {
     "now": "^15.0.6",
