--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "date-fns": "^1.30.1",
     "disqus-react": "^1.0.5",
     "facepaint": "^1.2.1",
-    "gatsby": "^2.3.16",
+    "gatsby": "^2.19.49",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-feed": "^2.1.1",
@@ -22,7 +22,9 @@
     "gatsby-plugin-manifest": "^2.0.28",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-source-contentful": "^2.1.100",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-sharp": "^2.1.17",
     "got": "^9.6.0",
