fix deployment env vars

--- a/.deploy/now.json
+++ b/.deploy/now.json
@@ -6,7 +6,10 @@
     {
       "src": "package.json",
       "use": "@now/static-build",
-      "config": { "distDir": "public" }
+      "config": { "distDir": "public" },
+      "env": {
+        "CONTENTFUL_ACCESS_TOKEN": "@hiddentao_contentful_access_token"
+      }
     }
   ]
 }
