switch from contentful to prismic

--- a/now.json
+++ b/now.json
@@ -13,7 +13,8 @@
   ],
   "build": {
     "env": {
-      "CONTENTFUL_ACCESS_TOKEN": "@hiddentao_contentful_access_token"
+      "CONTENTFUL_ACCESS_TOKEN": "@hiddentao_contentful_access_token",
+      "PRISMIC_ACCESS_TOKEN": "@hiddentao_prismic_access_token"
     }
   }
 }
