--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.0.32",
-    "gatsby-source-contentful": "^2.1.100",
     "gatsby-source-filesystem": "^2.0.29",
+    "gatsby-source-prismic": "^3.0.2",
     "gatsby-transformer-sharp": "^2.1.17",
     "got": "^9.6.0",
     "gray-matter": "^4.0.2",
@@ -53,9 +53,9 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "rm -rf ./.cache && gatsby develop",
+    "dev": "rm -rf ./.cache && gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "npm run dev",
     "serve": "gatsby serve",
     "deploy": "npm run now -- --confirm --prod -f && npm run now -- rm hiddentao-com-live --safe --yes",
     "now": "now --token $NOW_TOKEN --scope hiddentao",
