--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "author": "Ramesh Nair <ram@hiddentao.com>",
   "dependencies": {
+    "@babel/compat-data": "^7.10.1",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
