switch to datoCMS

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-source-datocms": "^2.2.6",
     "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-source-prismic": "^3.0.2",
     "gatsby-transformer-sharp": "^2.1.17",
     "got": "^9.6.0",
     "gray-matter": "^4.0.2",
