--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "color": "^3.1.0",
     "date-fns": "^1.30.1",
     "disqus-react": "^1.0.5",
-    "facepaint": "^1.2.1",
+    "emotion-styled-utils": "^2.2.3",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.19.49",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
     "gatsby-plugin-emotion": "^4.0.6",
@@ -32,9 +34,12 @@
     "got": "^9.6.0",
     "gray-matter": "^4.0.2",
     "lodash.get": "^4.4.2",
+    "lodash.truncate": "^4.4.2",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-syntax-highlighter": "^10.2.1",
     "reactjs-popup": "^1.3.2",
@@ -42,6 +47,7 @@
     "remark-parse": "^7.0.0",
     "remark-react": "^6.0.0",
     "rimraf": "^2.6.3",
+    "save": "^2.4.0",
     "strip-markdown": "^3.0.3",
     "unified": "^8.3.2"
   },
@@ -55,7 +61,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "dev": "rm -rf ./.cache && gatsby develop",
+    "dev": "rm -rf ./.cache && gatsby develop --host 0.0.0.0",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run dev",
     "serve": "gatsby serve",
