--- a/package.json
+++ b/package.json
@@ -76,5 +76,9 @@
   },
   "bugs": {
     "url": "https://github.com/hiddentao/hiddentao.com/issues"
-  }
+  },
+  "engines": {
+    "node": "12"
+  },
+  "engineStrict": true
 }
