build: update build scripts

--- a/package.json
+++ b/package.json
@@ -65,10 +65,7 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run dev",
     "serve": "gatsby serve",
-    "deploy": "npm run now -- --confirm --prod -f && npm run now -- rm hiddentao-com-live --safe --yes",
-    "ping-google": "curl http://www.google.com/ping?sitemap=https://hiddentao.com/sitemap.xml",
-    "now": "now --token $NOW_TOKEN --scope hiddentao",
-    "now-build": "npm run build"
+    "build-and-publish": "npm run build && curl http://www.google.com/ping?sitemap=https://hiddentao.com/sitemap.xml"
   },
   "repository": {
     "type": "git",
