--- a/package.json
+++ b/package.json
@@ -46,14 +46,16 @@
     "react-helmet": "^5.2.0",
     "react-syntax-highlighter": "^10.2.1",
     "reactjs-popup": "^1.3.2",
-    "remark": "^11.0.0",
-    "remark-parse": "^7.0.0",
-    "remark-react": "^6.0.0",
+    "rehype-stringify": "8.0.0",
+    "remark": "11.0.0",
+    "remark-parse": "7.0.0",
+    "remark-react": "6.0.0",
+    "remark-rehype": "8.1.0",
     "rimraf": "^2.6.3",
     "save": "^2.4.0",
     "strip-markdown": "^3.0.3",
     "ultimate-text-to-image": "^1.0.1",
-    "unified": "^8.3.2"
+    "unified": "8.3.2"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
@@ -78,7 +80,7 @@
     "url": "https://github.com/hiddentao/hiddentao.com/issues"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18"
   },
   "engineStrict": true
 }
