--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-robots-txt": "1.4",
     "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-source-datocms": "^3.0.19",
     "gatsby-source-filesystem": "^4.12.1",
